# idiom_tui

./: CHANGELOG.md  Cargo.toml  LICENCE  README.md
.github/workflows/: rust.yml
examples/: field.rs
src/: lib.rs  state.rs  text_field.rs
src/backend/: crossterm_backend.rs  mod.rs  style.rs  test.rs
src/layout/: line.rs  mod.rs  rect.rs  rect_iter.rs  tests.rs
src/pty/: cursor.rs  mod.rs  parser.rs
src/utils/: chunks.rs  mod.rs  tests.rs
src/widgets/: mod.rs  state.rs  tests.rs
