[package]
rust-version = "1.76"
name = "idiom_ui"
version = "0.0.1"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "LICENCE", "README.MD"]
license = "MIT"
description = "Simple low config editor supporting LSP and syntax highlighting."
repository = "https://github.com/Dah-phd/idiom"
keywords = ["terminal", "tui", "widgets", "crossterm"]
categories = []
authors = ["Daniel Nikolaev <toolsproed@gmail.com>"]

[features]
default = []
crossterm_backend = ["crossterm", "coolor"]

[dependencies]
bitflags = "2.9.1"
coolor = { version = "1.0.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
serde_json = "1.0.140"
unicode-width = "0.2.0"

[target.'cfg(unix)'.dependencies]
xterm-query = "0.5.2"

[profile.dev]
debug = true
