[package]
rust-version = "1.76"
name = "idiom_tui"
version = "0.0.1"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "LICENCE", "README.MD"]
license = "MIT"
description = "Simple low config editor supporting LSP and syntax highlighting."
repository = "https://github.com/Dah-phd/idiom"
keywords = ["terminal", "tui", "widgets", "crossterm"]
categories = []
authors = ["Daniel Nikolaev <toolsproed@gmail.com>"]

[features]
default = []
crossterm_backend = ["crossterm", "coolor", "serde_json", "xterm-query"]

[dependencies]
bitflags = "2.9.1"
coolor = { version = "1.0.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
serde_json = { version = "1.0.140", optional = true }
unicode-width = "0.2.0"

[target.'cfg(unix)'.dependencies]
xterm-query = { version = "0.5.2", optional = true }

[profile.dev]
debug = true
