[package]
rust-version = "1.76"
name = "idiom_tui"
version = "0.0.11"
edition = "2021"
include = ["src/**/*", "Cargo.toml", "LICENCE", "README.MD"]
license = "MIT"
description = "Bundel of tui widgest and layout componenets (split from idiom editor)"
repository = "https://github.com/Dah-phd/idiom_tui"
keywords = ["terminal", "tui", "widgets", "crossterm"]
categories = []
authors = ["Daniel Nikolaev <toolsproed@gmail.com>"]

[features]
default = []
crossterm_backend = ["crossterm", "coolor", "serde_json", "xterm-query"]

[dependencies]
bitflags = "2.9.1"
unicode-width = "0.2.1"
# crossterm_backend deps
coolor = { version = "1.0.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
serde_json = { version = "1.0.141", optional = true }

[target.'cfg(unix)'.dependencies]
xterm-query = { version = "0.5.2", optional = true }

[profile.dev]
debug = true
